samples/_failures_safe/1761312499_5383fc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9ac5da62.c: In function ‘main’:
./samples/SAFE/__tmp_9ac5da62.c:168:5: error: expected expression at end of input
  168 |     do
      |     ^~
./samples/SAFE/__tmp_9ac5da62.c:168:5: error: expected declaration or statement at end of input
